--- a/action.yaml
+++ b/action.yaml
@@ -5,6 +5,9 @@ inputs:
   source_registry:
     description: 'Source registry address'
     required: true
+  image_arch:
+    description: 'Architectures, eg: amd64,arm64'
+    required: false
   source_username:
     description: 'Source registry username'
     required: false
@@ -52,4 +55,5 @@ runs:
         INPUT_IMAGE_LIST_FILE: ${{ inputs.image_list_file }}
         INPUT_CONCURRENT: ${{ inputs.concurrent }}
         INPUT_RETRIES: ${{ inputs.retries }}
+        IMAGE_ARCH: ${{input.image_arch}}
         INPUT_IMAGE_SYNCER_VERSION: ${{ inputs.image_syncer_version }}
